--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   fl_chart: ^0.70.1
+  flutter_screenutil: ^5.9.3
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
